src/styles.css
@font-face {
  font-family: 'Inter';
  src: url(./Fonts/Inter-VariableFont_opsz\,wght.ttf);
}

* {
  box-sizing: border-box;
  font-family: 'Inter';
}

body {
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  min-height: 100vh;
  overflow: visible;
}

form {
  display: flex;
  gap: 15px;
}

input {
  font-size: inherit;
}

input::placeholder {
  text-align: center;
  font-size: initial;
  transform: translateY(-3px);
}


header {
  display: flex;
  flex-direction: column;
  width: 100%;

  div.logo {
    background-color: aquamarine;
    height: 10vh;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  nav {
    display: flex;
    flex: 1;
    justify-content: center;
    align-items: center;
    height: 15vh;
    background-color: azure;
    padding: 30px;
    font-size: 25px;
  }
}

main.hidden {
  display: none;
}

body::after {
  content: 'Rick-Phoenix / The Odin Project 2024 / Weather API by VisualCrossing / Icons by VisualCrossing and Freepik.';
  text-align: center;
  grid-column: 1 / 4;
  margin-top: 30px;
  margin-bottom: 30px;
  display: var(--pseudo, none);
}

main {
  background-color: beige;
  height: auto;
  display: grid;
  grid: auto 20vh auto 5vh 1fr / 1fr 1fr;
  padding: 15px 100px 70px;
  justify-items: center;
  gap: 30px;
  width: 100%;

  h3 {
    grid-area: 1 / 1 / 2 / 4;
  }

  div.card {
    width: 100%;
    border-radius: 15px;
    background-color: lightgray;
    padding: 20px;
    width: 100%;
  }

  div.card.dailyDiv {
    display: grid;
    gap: 10px;
    grid-area: 5 / 1 / 6 / 4;

    div.singleDailyDiv {
      display: grid;
      grid: 1fr 1fr/1fr 1fr 1fr;

      span.date {
        grid-area: 1 / 2 / 3 / 3;
      }
  
      span.conditions {
        grid-area: 1 / 3 / 2 / 4;
      }
  
      img.icon {
        width: 50px;
        grid-area: 1 / 1 / 3 / 2;
      }

    }

  }

  div.hourlyDiv::before {
    content: '';
    background-color: red;
    position: absolute;
    height: calc(100% - 30px);
    top: 15px;
    width: 2px;
    left: 50%;
  }

  div.hourlyForecast::after {
    content: '';
    background-color: var(--show, red);
    position: absolute;
    height: 2px;
    width: calc(100% + 15px);
    left: -7.5px;
    bottom: -7.5px;
  }


  div.hourlyDiv {
    display: grid;
    grid: repeat(auto-fit, 100px) / 1fr 1fr;
    gap: 15px;
    grid-area: 3 / 1 / 4 / 4;
    position: relative;

    div.hourlyForecast {
      display: grid;
      grid: auto / repeat(3,1fr);
      align-items: center;
      justify-items: center;
      height: 100px;
      width: 100%;
      padding-right: 30px;
      position: relative;
  
      img.icon.hourly {
        width: 50px;
        grid-area: 1 / 1 / 3 / 2;
      }
  
      div.time {
        grid-area: 1 / 2 / 3 / 3;
      }
  
      div.conditions {
        grid-area: 1 / 3 / 2 / 4;
        justify-self: end;
        align-self: end;
        padding-bottom: 10px;
      }
  
      div.temperature {
        grid-area: 2 / 3 / 3 / 4;
        align-self: start;
      justify-self: end;
      }
    }
  }

  div.weatherDetail:not(:last-child)::after {
    content: '';
    position: absolute;
    right: -15px;
    top: 0;
    width: 2px;
    height: 100%;
    background-color: red;

  }

  div.card.detailsDiv {
    display: grid;
    grid-area: 2 / 1 / 3 / 4   ;
    grid: 1fr / repeat(5,1fr);
    align-items: center;
    gap: 40px;

    div.weatherDetail {
      display: grid;
      grid: 1fr 1fr / 1fr 1fr;
      align-items: center;
      width: 100%;
      position: relative;
    }

    img.icon.details {
      width: 60px;
      grid-row: 1 / 3;
    }

    span.detailName {
      grid-area: 1 / 2 / 2 / 3;
      text-align: end;
    }

    span.detailValue {
      grid-area: 2 / 2 / 3 / 3;
      text-align: end;
    }
  }
}

